# PQA_Agent

./: .gitignore  INSTALL.md  LICENSE  QUICKSTART.md  README.md  VSCODE_SETUP.md  build_distribution.ps1  build_exe.ps1  config.py  install_offline.ps1  mcp_server_fast.py  pyproject.toml  requirements.txt  setup_credentials.ps1  setup_credentials.py  validate_user_items.py  validate_user_items_api.py
.github/: copilot-instructions.md
.github/workflows/: release.yml
Tool/RQ1_agent/: .env.example  .gitignore  EXCEL_ANALYSIS_COMPLETE.md  EXCEL_IMPACT_TEST.md  EXCEL_JAVA_MAPPING.md  EXCEL_VS_JAVA_RULES_COMPARISON.md  PARSER_OPTIMIZATION_COMPLETE.md  README.md  REGISTRATION_REQUEST.md  RQ1_LIBRARY_GUIDE.md  RQ1_RULES.md  STRATEGY_EXCEL_DRIVEN.md  TOOLNAME_VERSION.md  benchmark_rules.py  check_assignee_format.py  extract_vba.py  fetch_4_workitems.py  fetch_releases.py  fetch_workitems.py  find_my_projects.py  parse_rules.py  rq1_server.py  simple_validator.py  smart_validator.py  smart_validator_v2.py  test-post-cli.ps1  test_bb_rq1.py  test_bc_production.py  (+9 more)
building-block-rq1-ref/: .gitignore  marketplace.properties
docs/: RULES_COMPLETE.md
rules/: rule_prpl_01_bc_requested_state.py  rule_prpl_03_conflicted_state.py  rule_prpl_06_ifd_defect_attributes.py  rule_prpl_07_bc_pst_dates.py  rule_prpl_11_ifd_sla.py  rule_prpl_15_release_closure.py  rule_prpl_18_ifd_isw_commitment_delay.py
scripts/: analyze_activated_rules.py  deep_rule_mapping.py  excel_converter.py  parse_java_rules.py  rule_mapping_system.py
tests/: test_rule06_closed_ifd.py  test_rule18.py
(+1589 files in other folders)
